--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-entities",
-  "version": "8.1.0",
+  "version": "9.0.0-alpha",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-entities.js",
@@ -23,8 +23,8 @@
   "devDependencies": {},
   "optionalDependencies": {},
   "dependencies": {
-    "kevoree-commons": "^2.1.0",
-    "kevoree-library": "^5.0.4",
+    "kevoree-commons": "next",
+    "kevoree-library": "next",
     "pseudoclass": "^1.0.2"
   },
   "license": "LGPL-3.0"
