--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "kevoree-entities",
-  "version": "9.0.0-alpha.3",
+  "version": "9.0.0-alpha.4",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-entities.js",
+  "typings": "kevoree-entities.d.ts",
   "keywords": [
     "kevoree",
     "api",
