--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "kevoree-entities",
-  "version": "9.0.0-alpha.10",
+  "version": "9.0.0",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-entities.js",
@@ -24,8 +24,8 @@
   "devDependencies": {},
   "optionalDependencies": {},
   "dependencies": {
-    "kevoree-commons": "next",
-    "kevoree-library": "next",
+    "kevoree-commons": "^3.0.0",
+    "kevoree-library": "^5.0.10",
     "pseudoclass": "^1.0.2"
   },
   "license": "LGPL-3.0"
