--- a/package.json
+++ b/package.json
@@ -1,10 +1,14 @@
 {
   "name": "kevoree-entities",
-  "version": "9.0.0",
+  "version": "9.0.1",
   "description": "Kevoree Entities - Set of abstract Kevoree entities (group, node, channel, component)",
   "author": "Maxime Tricoire <max.tricoire@gmail.com>",
   "main": "./kevoree-entities.js",
   "typings": "kevoree-entities.d.ts",
+	"scripts": {
+		"preinstall": "npm run lint",
+		"lint": "eslint kevoree-entities.js lib"
+	},
   "keywords": [
     "kevoree",
     "api",
@@ -21,12 +25,20 @@
     "type": "git",
     "url": "https://github.com/kevoree/kevoree-js"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "eslint": "^3.12.2"
+  },
   "optionalDependencies": {},
   "dependencies": {
     "kevoree-commons": "^3.0.0",
     "kevoree-library": "^5.0.10",
     "pseudoclass": "^1.0.2"
   },
-  "license": "LGPL-3.0"
+  "license": "LGPL-3.0",
+	"eslintConfig": {
+		"env": {
+			"node": true
+		},
+		"extends": ["eslint:recommended"]
+	}
 }
